# brachiograph-converter-gui

./: .gitignore  Makefile  README.md  brachiograph_converter_gui.py  linedraw.py  pyproject.toml  requirements.txt
data/: org.andypiper.brachiograph-converter.desktop  org.andypiper.brachiograph-converter.gschema.xml  org.andypiper.brachiograph-converter.metainfo.xml  uk.andypiper.brachiograph-converter.desktop  uk.andypiper.brachiograph-converter.gschema.xml  uk.andypiper.brachiograph-converter.metainfo.xml
