[tool.poetry]
name = "brachiograph-image-converter"
version = "0.1.0"
description = "BrachioGraph Image Converter"
authors = ["Andy Piper <andypiper@omg.lol>"]

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.4.3"
paramiko = "^2.12.0"
cairosvg = "^2.7.0"
numpy = "^1.21.0"
opencv-python = "^4.5.2"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
