[tool.poetry]
name = "brachiograph-image-converter"
version = "0.1.0"
description = "BrachioGraph Image Converter"
authors = ["Andy Piper <andypiper@omg.lol>"]

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.7.0"
paramiko = "^3.3.1"
cairosvg = "^2.7.1"
numpy = "^1.26.0"
opencv-python = "^4.9.8"
Pillow = "^10.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
black = "^24.4.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
